Implementacion de cambios en branch externo y otras modificaciones